<resources>
    <string name="app_name">Global Organ Donation</string>
    <string name="sign_up">Sign up</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="login">Login</string>
    <string name="donor">Donor</string>
    <string name="receiver">Receiver</string>
    <string name="enter_name">Enter name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter email Id</string>
    <string name="enter_phoneNo">Enter Mobile No.</string>
    <string name="profile">Profile</string>
    <string name="email">E-mail</string>
    <string name="blood_group">Blood Group</string>
    <string name="donate">Donate</string>
    <string name="request">Request</string>
    <string name="age">Age</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="isDonar">Ready to donate?</string>
    <string name="donar">Become a donar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
